Добавление пустого модального окна

--- a/index.html
+++ b/index.html
@@ -481,5 +481,9 @@
       </div>
       <!-- Форму "Подписывайся" сказали не трогать" -->
     </footer>
+
+    <div class="backdrop is-hidden">
+      <div class="modal"></div>
+    </div>
   </body>
 </html>
