--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
+  />
+    <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap"
     />
@@ -465,21 +469,26 @@
           </ul>
         </div>
 
-        <!-- Форма подпишись -->
-        <div class="form-subscribe">
-          <p class="footer-subtitle">
+        <!-- Форма подпишись -->      
+
+        <form class="form-subscribe">
+          <span class="footer-subtitle">
             Подпишитесь на рассылку
-          </p>
-          <!-- какаято форма-->
-          <button class="sign-button" type="button">
-            <span>Подписаться</span>
-            <!-- <svg class="sign-icon">
-                <use href="./images/sprite.svg#send"></use>
-              </svg> -->
-          </button>
-        </div>
+          </span>
+          <div class="subscribe-field flex-box">
+            <label class="">              
+              <input class="form-field" type="text" name="subscribe" placeholder=" " autocomplete="email">
+              <span class="subscribe-tooltip animate__lightSpeedInRight">E-mail</span>
+            </label>
+            <button class="subscribe-button" type="button">
+              <span>Подписаться</span>
+              <!-- <svg class="sign-icon">
+                  <use href="./images/sprite.svg#send"></use>
+                </svg> -->
+            </button>
+          </div>
+        </form>
       </div>
-      <!-- Форму "Подписывайся" сказали не трогать" -->
     </footer>
 
     <div class="backdrop is-hidden">
