--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
                 Соглашаюсь с рассылкой и принимаю
                 <a class="license-link" href="">Условия договора </a>
               </span>
-            1</label>
+            </label>
           </div>
 
           <button class="order-send">Отправить</button>
