Оформлен кастомный чек бокс

--- a/index.html
+++ b/index.html
@@ -560,15 +560,18 @@
 
             <label class="license-agreement">
               <input
-                class="agreement-checkbox visually-hidden"
+                class="checkbox visually-hidden"
                 type="checkbox"
                 name="order-data"
-              />
-              <span class="agreement-description">
+              />      
+              <span class="checkbox-icon"></span>  
+
+              <p class="agreement-description">                
                 Соглашаюсь с рассылкой и принимаю
                 <a class="license-link" href="">Условия договора </a>
-              </span>
+              </p>
             </label>
+
           </div>
 
           <button class="order-send">Отправить</button>
