Добавлена анимация на открытие модального окна

--- a/index.html
+++ b/index.html
@@ -5,10 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
-    />
-    <link
-      rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap"
     />
     <link
@@ -506,6 +502,7 @@
             <use href="./images/sprite.svg#close"></use>
           </svg>
         </button>
+        
         <form class="form-order">
           <p class="form-text">Оставьте свои данные, мы вам перезвоним</p>
 
@@ -572,9 +569,8 @@
                 <a class="license-link" href="">Условия договора </a>
                 </span>
             </label>
-          </div>
-
-          <button class="order-send">Отправить</button>
+            <button class="order-send" type="button">Отправить</button>
+          </div>         
         </form>
       </div>
     </div>
