исправление обрдера в хедере на портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -16,52 +16,54 @@
   </head>
   <body>
     <!-- Шапка с главной страницы -->
-    <header class="flex-box container border-buttom">
-      <nav class="nav">
-        <a href="./index.html" class="header-logo" aria-label="Логотип">
-          <span>
-            Web
-          </span>
-          Studio
+    <header class=" border-buttom">
+<div class="flex-box container">
+  <nav class="nav">
+    <a href="./index.html" class="header-logo" aria-label="Логотип">
+      <span>
+        Web
+      </span>
+      Studio
+    </a>
+    <ul class="nav-list">
+      <li>
+        <a class="nav-link" href="./index.html">
+          <p>Студия</p>              
         </a>
-        <ul class="nav-list">
-          <li>
-            <a class="nav-link" href="./index.html">
-              <p>Студия</p>              
-            </a>
-          </li>
-          <li>
-            <a class="nav-link current-page" href="./portfolio.html">
-              <p>Портфолио</p>              
-            </a>
-          </li>
-          <li>
-            <a class="nav-link" href="">
-              <p>Контакты</p>              
-            </a>
-          </li>
-        </ul>
-      </nav>
-      <address class="flex-box">
-        <ul class="address-list">
-          <li>
-            <a class="address-item" href="mailto:info@devstudio.com">
-              <svg width="16px" height="11px">
-                <use href="./images/sprite.svg#mail"></use>
-              </svg>
-              <p>info@devstudio.com</p>
-            </a>
-          </li>
-          <li>
-            <a class="address-item" href="tel:+380961111111">
-              <svg width="10px" height="14px">
-                <use href="./images/sprite.svg#smartphone"></use>
-              </svg>
-              <p>+38 096 111 11 11</p>
-            </a>
-          </li>
-        </ul>
-      </address>
+      </li>
+      <li>
+        <a class="nav-link current-page" href="./portfolio.html">
+          <p>Портфолио</p>              
+        </a>
+      </li>
+      <li>
+        <a class="nav-link" href="">
+          <p>Контакты</p>              
+        </a>
+      </li>
+    </ul>
+  </nav>
+  <address class="flex-box">
+    <ul class="address-list">
+      <li>
+        <a class="address-item" href="mailto:info@devstudio.com">
+          <svg width="16px" height="11px">
+            <use href="./images/sprite.svg#mail"></use>
+          </svg>
+          <p>info@devstudio.com</p>
+        </a>
+      </li>
+      <li>
+        <a class="address-item" href="tel:+380961111111">
+          <svg width="10px" height="14px">
+            <use href="./images/sprite.svg#smartphone"></use>
+          </svg>
+          <p>+38 096 111 11 11</p>
+        </a>
+      </li>
+    </ul>
+  </address>
+</div>
     </header>
     <!-- Основной раздел -->
     <main class="container flex-box vertical-paddings">
